# barrett_wam_grasp_capture

./: .gitignore
wam_node/: CMakeLists.txt  package.xml
wam_node/include/: nonstandard_main_function.h
wam_node/launch/: wam_node.launch
wam_node/scripts/: grasp_capture.py  rbagtest.py
wam_node/src/: wam_node.cpp
