<package>
  <name>wam_node</name>
  <version>0.1.0</version>
  <description >

     Barrett Technology ROS node for 4-DOF and 7-DOF WAM to be run on WAM robot PC or external PC via CAN.

  </description>

  <author>Barrett Technology Inc., Kyle Maroney</author>
  <maintainer email="cartejac@onid.oregonstate.edu">Jackson Carter</maintainer>
  <license>GPLv3</license>
  <!--<url>http://ros.org/wiki/wam_node</url>-->
  <build_depend> std_msgs </build_depend>
  <build_depend> std_srvs </build_depend>
  <build_depend> sensor_msgs</build_depend>
  <build_depend> geometry_msgs</build_depend>
  <build_depend> roscpp </build_depend>
  <build_depend> tf </build_depend>
  <build_depend> wam_msgs</build_depend>
  <build_depend> wam_srvs</build_depend>
  <build_depend> rospy</build_depend>
  <build_depend> rosbag</build_depend>
  
  
  <run_depend> std_msgs </run_depend>
  <run_depend> std_srvs </run_depend>
  <run_depend> sensor_msgs </run_depend>
  <run_depend> geometry_msgs </run_depend>
  <run_depend> roscpp </run_depend>
  <run_depend> tf </run_depend>
  <run_depend> wam_msgs </run_depend>
  <run_depend> wam_srvs </run_depend>
  <run_depend> rospy </run_depend>
  <run_depend> rosbag </run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export> 
    <!-- Addtl info and unspecified tags can go here-->
  </export>
</package>


